--- a/style.css
+++ b/style.css
@@ -1,97 +1,168 @@
- * {
-     margin: 0px;
-     padding: 0px;
-     font-size: 14px;
- }
- 
- @font-face {
-     font-family: 'leanote';
-     src: url('fonts/leanote.eot?h0qsb9');
-     src: url('fonts/leanote.eot?h0qsb9#iefix') format('embedded-opentype'), url('fonts/leanote.ttf?h0qsb9') format('truetype'), url('fonts/leanote.woff?h0qsb9') format('woff'), url('fonts/leanote.svg?h0qsb9#leanote') format('svg');
-     font-weight: normal;
-     font-style: normal;
- }
- 
- .header {
-     width: 100%;
-     height: 50px;
-     background: #25313e;
- }
- 
- .nav-header {
-     position: relative;
-     float: left;
- }
- 
- .nav-brand {
-     color: #adbece;
-     text-align: center;
-     font-size: 14px;
-     line-height: 50px;
-     display: inline-block;
-     padding: 0 15px;
-     font-weight: bold;
-     text-decoration: none;
- }
- 
- .logo {
-     font-family: 'leanote' !important;
-     speak: none;
-     font-style: normal;
-     font-weight: normal;
-     font-variant: normal;
-     text-transform: none;
-     -webkit-font-smoothing: antialiased;
- }
- 
- .logo::before {
-     line-height: 38px;
-     font-size: 28px;
-     content: "\e901";
-     line-height: 1;
-     margin-top: 10px;
-     display: inline-block;
-     vertical-align: top;
- }
- 
- .logo-title {
-     line-height: 50px;
-     font-size: 14px;
- }
- 
- .logo-title::after {
-     display: table;
-     content: " ";
-     clear: both;
- }
- 
- .nav {
-     float: right;
- }
- 
- .nav li {
-     float: left;
-     list-style: none;
- }
- 
- .nav li a {
-     text-decoration: none;
-     color: #adbece;
-     background-color: #25313e;
-     padding: 15px;
-     line-height: 20px;
-     position: relative;
-     display: block;
- }
- 
- .nav li a:hover {
-     color: white;
- }
- 
- .nav .img {
-     height: 30px;
-     max-width: 30px;
-     overflow: hidden;
-     border-radius: 50%;
-     margin: 10px 10px 0 0;
- }
+* {
+    margin: 0px;
+    padding: 0px;
+    font-size: 14px;
+}
+
+@font-face {
+    font-family: 'leanote';
+    src: url('fonts/leanote.eot?h0qsb9');
+    src: url('fonts/leanote.eot?h0qsb9#iefix') format('embedded-opentype'), url('fonts/leanote.ttf?h0qsb9') format('truetype'), url('fonts/leanote.woff?h0qsb9') format('woff'), url('fonts/leanote.svg?h0qsb9#leanote') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.header {
+    width: 100%;
+    height: 50px;
+    background: #25313e;
+}
+
+.nav-header {
+    position: relative;
+    float: left;
+}
+
+.nav-brand {
+    color: #adbece;
+    text-align: center;
+    font-size: 14px;
+    line-height: 50px;
+    display: inline-block;
+    padding: 0 15px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.logo {
+    font-family: 'leanote' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+}
+
+.logo::before {
+    line-height: 38px;
+    font-size: 28px;
+    content: "\e901";
+    line-height: 1;
+    margin-top: 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.logo-title {
+    line-height: 50px;
+    font-size: 14px;
+}
+
+.logo-title::after {
+    display: table;
+    content: " ";
+    clear: both;
+}
+
+.nav {
+    float: right;
+}
+
+.nav li {
+    float: left;
+    list-style: none;
+}
+
+.nav li a {
+    text-decoration: none;
+    color: #adbece;
+    /* background-color: #25313e; */
+    padding: 15px;
+    line-height: 20px;
+    position: relative;
+    display: block;
+}
+
+.nav li a:hover {
+    color: white;
+}
+
+.nav .img {
+    height: 30px;
+    max-width: 30px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 10px 10px 0 0;
+}
+
+.body {
+    width: 100%;
+    height: 247px;
+}
+
+.list {
+    background: #fefefe;
+    width: 220px;
+    height: 240px;
+    float: left;
+}
+
+.list .nav {
+    list-style: none;
+    float: left;
+    width: 100%;
+}
+
+.list .nav li {
+    line-height: 1.5;
+    position: relative;
+    display: block;
+    border-bottom: 1px solid #ececec;
+    border-right: 1px solid #ececec;
+    width: 100%;
+    height: 42px;
+}
+
+.list .nav li a {
+    padding: 11px 15px;
+    position: relative;
+    font-weight: bold;
+    font-size: 14px;
+    /* border-top: 1px solid transparent; */
+    display: block;
+    height: 44px;
+    box-sizing: border-box;
+    color: black;
+}
+
+.list .nav>li>a>i {
+    color: #a4a4a4;
+    border-right: 1px solid #ececec;
+    margin: -12px -15px;
+    line-height: 44px;
+    width: 44px;
+    float: left;
+    margin-right: 10px;
+    font-size: 14px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.list .nav>li>a>i::before {
+    position: relative;
+    z-index: 2;
+    content: "\f0e4";
+}
+
+.list .nav .bg-sucess {
+    position: absolute;
+    left: -42px;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    z-index: 0;
+    background-color: #8ec165;
+    color: #ebf4e4;
+}
